infra/k8s/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kobo-frontend
  labels:
    app.kubernetes.io/name: kobo-frontend
spec:
  selector:
    app.kubernetes.io/name: kobo-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
